<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.gradshub.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.gradshub.main.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/myGroupsFragment"
        android:name="com.example.gradshub.main.ui.mygroups.MyGroupsFragment"
        android:label="@string/menu_myGroups"
        tools:layout="@layout/fragment_item_list" >
        <action
            android:id="@+id/action_myGroupsFragment_to_exploreGroupsFragment"
            app:destination="@id/exploreGroupsFragment"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/createGroupFragment"
        android:name="com.example.gradshub.main.ui.creategroup.CreateGroupFragment"
        android:label="@string/menu_createGroup"
        tools:layout="@layout/fragment_create_group" >
        <action
            android:id="@+id/action_createGroupFragment_to_myGroupsFragment"
            app:destination="@id/myGroupsFragment"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"

            app:popUpTo="@id/createGroupFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/exploreGroupsFragment"
        android:name="com.example.gradshub.main.ui.exploregroups.ExploreGroupsFragment"
        android:label="Research Groups"
        tools:layout="@layout/fragment_explore_groups" />

</navigation>