<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messaging.searchableUsers.UserProfileFragment">


    <TextView
        android:id="@+id/userProfileNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/user_profile_name"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/startChatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userProfileNameTV"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/register_rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/chat_button_text"/>


    <Button
        android:id="@+id/friendStatusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startChatBtn"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/register_rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/friend_button_text"/>


    <Button
        android:id="@+id/blockStatusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friendStatusBtn"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/register_rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/block_button_text"/>


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>