<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crete_post"
    tools:context=".main.createpost.CreatePostFragment">


    <TextView
        android:id="@+id/postTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/post_title"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postSubjectContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:errorTextAppearance="@color/colorRed" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postSubjectET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type title" />
        <!--android:maxLength="50"-->
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postSubjectContainer"
        android:layout_margin="16dp"
        android:text="@string/description"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postDescriptionContainer"
        android:layout_width="380dp"
        android:layout_height="76dp"
        android:layout_below="@id/descriptionTV"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postDescriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_hint" />

        <TextView
            android:id="@+id/fileAttachmentTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/postBtn"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postDescriptionContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:background="@drawable/register_rounded_button"
        android:text="POST"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>